<resources>
    <string name="app_name">Home</string>
    <string name="linens">Linen Request</string>
    <string name="alerts">Alerts</string>
    <string name="events">Events Calender</string>
    <string name="faq">FAQ</string>
    <string name="settings">Settings</string>
    <string name="settingstext1">Turn on notifications?</string>
    <string name="settingstext2">Select houses to be notified of their events.</string>
    <string-array name="places">
        <item>Neville</item>
        <item>ShadySide</item>
        <item>University Place</item>
    </string-array>
    <string-array name="places2">
        <item>Neville</item>
        <item>ShadySide</item>
        <item>University Place</item>
    </string-array>
    <string name="dropdown1">Select Your House</string>
    <string name="upcoming_events">Upcoming Events!</string>
</resources>
