<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button8"
        android:layout_width="424dp"
        android:layout_height="151dp"
        android:layout_marginTop="980dp"
        android:layout_marginBottom="544dp"
        android:backgroundTint="#ef6666"
        android:text="@string/faq"
        android:textAlignment="textStart"
        android:textColor="#fffdf9"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="424dp"
        android:layout_height="157dp"
        android:layout_marginTop="680dp"
        android:layout_marginBottom="544dp"
        android:backgroundTint="#D8bf49"
        android:text="@string/events"
        android:textAlignment="textStart"
        android:textColor="#fffdf9"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="422dp"
        android:layout_height="148dp"
        android:layout_marginTop="380dp"
        android:layout_marginBottom="544dp"
        android:backgroundTint="#398fb1"
        android:text="@string/alerts"
        android:textAlignment="textStart"
        android:textColor="#fffdf9"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="419dp"
        android:layout_height="145dp"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="544dp"
        android:backgroundTint="#6fd1be"
        android:text="@string/linens"
        android:textAlignment="textStart"
        android:textColor="#fffdf9"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>